# gpttui

./: .gitignore  Makefile  README.md  pyproject.toml
src/gpttui/database/: base.py  sqlite.py
src/gpttui/models/: base.py  chatsonic.py  colossal.py  openai.py
src/gpttui/tui/: app.py  config.py  front.py  init.py  main.py
test/: main.sh  test_db.py  test_model.py
